test/expected/explain_reinterpret_cast_pv-c.out
explain reinterpret_cast<void*>(x)
        ^
9: error: "reinterpret_cast": unsupported keyword in C
